Got Expense Entries working and Ledger to show number of files attached to each Entry

--- a/web/templates/ledger.html
+++ b/web/templates/ledger.html
@@ -143,8 +143,13 @@
                             {% endif %}
                         </td>
                         <td style="color: #5B6571;">
-                            {# Placeholder for attachment count - will be implemented later #}
+                            {% if entry.attachment_count == 0 %}
                             -
+                            {% elif entry.attachment_count == 1 %}
+                            1 file
+                            {% else %}
+                            {{ entry.attachment_count }} files
+                            {% endif %}
                         </td>
                     </tr>
                     {% endfor %}
