--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -296,7 +296,7 @@
     </div>
     
     <div class="button-group">
-        <a href="{{ url_for('index') }}" class="btn btn-secondary">Cancel</a>
+        <a href="{{ url_for('clients.index') }}" class="btn btn-secondary">Cancel</a>
         <button onclick="saveSettings()" class="btn">Save Settings</button>
     </div>
 
